feat(lms): implement LMSClient and add full pytest test suite
- Added initial LMSClient implementation with login, logout, token validation,

  and task submission retrieval logic.

- Implemented comprehensive pytest suite covering authentication, token flows,

  error handling, data-shape validation, and submission parsing.

chore(pre-commit): add pytest hook and update configuration

- Added a local pytest hook to run 'uv run pytest' before each commit.

- Updated '.pre-commit-config.yaml' with consistent exclude patterns across hooks.

- Preserved existing tooling (Ruff, Black, Mypy, Prettier, whitespace hooks).

Enhances code quality by ensuring the entire Python test suite runs on every commit.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,15 +23,15 @@ repos:
     rev: 25.11.0
     hooks:
       - id: black
-        exclude: ^(dist/|build/|.venv/|.uv/)
+        exclude: ^(dist/|build/|\.venv/|\.uv/|\.mypy_cache/|\.pytest_cache/|\.ruff_cache/)
 
   # Mypy: type-check Python
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.18.2
     hooks:
       - id: mypy
-        args: [--ignore-missing-imports]
-        exclude: ^(dist/|build/|.venv/|.uv/|tests/fixtures/)
+        args: [--ignore-missing-imports, --disable-error-code=import-untyped]
+        exclude: ^(dist/|build/|\.venv/|\.uv/|\.mypy_cache/|\.pytest_cache/|\.ruff_cache/)
 
   # Prettier: format Markdown/YAML/JSON/etc.
   - repo: https://github.com/pre-commit/mirrors-prettier
@@ -40,3 +40,13 @@ repos:
       - id: prettier
         args: [--write]
         types_or: [markdown, yaml, json, html, css, javascript]
+
+  # Pytest: run test suite
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest (unit tests)
+        entry: uv run pytest
+        language: system
+        pass_filenames: false
+        stages: [pre-commit]
