feat(docs): add submission downloader system and Google Docs downloader
- Implemented SubmissionDownloader base class and abstract interface.

- Added SubmissionDownloaderFactory for registry-based downloader instantiation.

- Implemented GoogleDocsDownloader with export URL construction and file download support.

- Added extract_doc_id helper and robust URL parsing logic.

test: add unit tests for factory, interface, and Google Docs downloader

- Added FakeResponse and FakeSession test doubles.

- Added tests for extract_doc_id, file saving, custom filenames, and HTTP error paths.

- Included type: ignore[arg-type] annotations to satisfy PyCharm/mypy for FakeSession injection.

chore: update .gitignore to exclude downloaded*/ directories and *.env files

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ __pycache__/
 *$py.class
 *.so
 
-# Virtual environments
+# Environments
 .venv/
 .env/
 venv/
 ENV/
+*.env
 
 # UV cache & build artifacts
 .uv/
@@ -25,13 +26,14 @@ wheels/
 *.egg-info/
 *.egg
 
-# Logs & local runs
+# Logs, local runs and temp files
 *.log
 logs/
 results/
 outputs/
 debug/
 reports/
+downloaded*/
 
 # IDE & editor folders
 .vscode/
